@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst prepare setup
+DEPEND=dev-python/keyring[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] dev-python/notify-python[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] dev-python/pygtk[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] )
+DESCRIPTION=A simple backup system inspired by TimeVault and FlyBack, with a GUI for GNOME and KDE4
+EAPI=5
+HOMEPAGE=http://backintime.le-web.org/
+IUSE=kde gnome python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-python/keyring[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] dev-python/notify-python[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] net-misc/rsync[xattr,acl] kde? ( >=kde-base/kdelibs-4 kde-base/pykde4[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] kde-base/kompare kde-base/kdesu ) gnome? ( gnome-base/libglade dev-util/meld gnome-base/gnome-session dev-python/gnome-vfs-python dev-python/libgnome-python dev-python/pygobject:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] dev-python/pygtk[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] )
+REQUIRED_USE=python_single_target_python2_6? ( python_targets_python2_6 ) python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_6 python_single_target_python2_7 )
+SLOT=0
+SRC_URI=http://backintime.le-web.org/download/backintime/backintime-1.0.34.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	30d5d7986d3f80d0f2c2726366426859	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=9554587e71caf3c245c3f2460c60fc02
