@@ -1,6 +1,11 @@
 # ChangeLog for app-backup/backintime
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.19 2013/07/28 08:12:45 jcallen Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-backup/backintime/ChangeLog,v 1.20 2014/04/24 10:11:40 xmw Exp $
+
+*backintime-1.0.34 (24 Apr 2014)
+
+  24 Apr 2014; Michael Weber <xmw@gentoo.org> +backintime-1.0.34.ebuild:
+  Version bump (bug 488350).
 
   28 Jul 2013; Jonathan Callen <jcallen@gentoo.org> backintime-1.0.24-r1.ebuild:
   Fix dependencies, add REQUIRED_USE
